# Rovebot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  convert_env.py  fly.toml  main.py  pyproject.toml
app/: __init__.py  deploy.py  main.py  models.py  settings.py
app/api/: slack_actions.py  webhooks.py
app/domain/: classification.py  draft_store.py  drafting.py  guardrails.py  learning.py  pipeline.py
app/integrations/: gmail.py  llm.py  slack.py
app/models/: draft.py  email.py  webhook.py
app/services/: pipeline.py
knowledge/: STYLEGUIDE.md  style_guide.md
prompts/: classify.md  draft.md  email_draft.md
tests/: conftest.py  test_api.py  test_llm.py  test_pipeline.py
